@startuml ValueObjects
!include _style.puml

title Domain Value Objects

package "Identity" {

    class UserID <<Value Object>> {
        - value : string
        __
        + {static} NewUserID(value string) : (UserID, error)
        + {static} ReconstituteUserID(value string) : UserID
        + String() : string
        + IsEmpty() : bool
        + Equal(other UserID) : bool
    }

    class Email <<Value Object>> {
        - value : string
        __
        + {static} NewEmail(value string) : (Email, error)
        + {static} ReconstituteEmail(email string) : Email
        + String() : string
        + IsEmpty() : bool
        + Equal(other Email) : bool
    }

    class SessionID <<Value Object>> {
        - value : string
        __
        + {static} NewSessionID(value string) : (SessionID, error)
        + {static} ReconstituteSessionID(value string) : SessionID
        + String() : string
        + IsEmpty() : bool
        + Equal(other SessionID) : bool
    }

    class RecoveryTokenID <<Value Object>> {
        - value : string
        __
        + {static} NewRecoveryTokenID(v string) : (RecoveryTokenID, error)
        + {static} ReconstituteRecoveryTokenID(v string) : RecoveryTokenID
        + String() : string
    }

    class ActivationTokenID <<Value Object>> {
        - value : string
        __
        + {static} NewActivationTokenID(v string) : (ActivationTokenID, error)
        + {static} ReconstituteActivationTokenID(v string) : ActivationTokenID
        + String() : string
    }

    class RoleID <<Value Object>> {
        - value : string
        __
        + {static} NewRoleID(value string) : (RoleID, error)
        + {static} ReconstituteRoleID(value string) : RoleID
        + String() : string
        + IsEmpty() : bool
        + Equal(other RoleID) : bool
    }

    class RoleName <<Value Object>> {
        - name : string
        __
        + {static} NewRoleName(name string) : (RoleName, error)
        + {static} ReconstituteRoleName(name string) : RoleName
        + Name() : string
        + Equal(other RoleName) : bool
        + IsEmpty() : bool
    }

    note bottom of RoleName
        Roles are dynamic, defined via
        seed_roles.yml and resolved at
        runtime through IRegistrationRoleProvider.
        No hardcoded constants in domain.
        Validated by regex: ^[a-z][a-z0-9_]{1,49}$
    end note

    class Permission <<Value Object>> {
        - resource : string
        - action : string
        __
        + {static} NewPermission(value string) : (Permission, error)
        + {static} ReconstitutePermission(resource, action string) : Permission
        + Resource() : string
        + Action() : string
        + String() : string
        + IsEmpty() : bool
        + Equal(other Permission) : bool
    }
}

package "Tokens" {

    class HashedToken <<Value Object>> {
        - value : string
        __
        + {static} NewHashedToken(value string) : (HashedToken, error)
        + {static} ReconstituteHashedToken(value string) : HashedToken
        + String() : string
        + IsEmpty() : bool
        + Equal(other HashedToken) : bool
    }

    class RecoveryTokenHash <<Value Object>> {
        - value : string
        __
        + {static} NewRecoveryTokenHash(v string) : (RecoveryTokenHash, error)
        + {static} ReconstituteRecoveryTokenHash(v string) : RecoveryTokenHash
        + String() : string
    }

    class ActivationTokenHash <<Value Object>> {
        - value : string
        __
        + {static} NewActivationTokenHash(v string) : (ActivationTokenHash, error)
        + {static} ReconstituteActivationTokenHash(v string) : ActivationTokenHash
        + String() : string
    }

    class AccessToken <<Value Object>> {
        - value : string
        __
        + {static} NewAccessToken(value string) : (AccessToken, error)
        + String() : string
    }

    class SessionExpiry <<Value Object>> {
        - value : time.Time
        __
        + {static} NewSessionExpiry(expiresAt, now time.Time) : (SessionExpiry, error)
        + {static} ReconstituteSessionExpiry(t time.Time) : SessionExpiry
        + Time() : time.Time
        + IsZero() : bool
        + IsExpired(now time.Time) : bool
    }
}

package "Credentials" {

    class HashedPassword <<Value Object>> {
        - value : string
        __
        + {static} NewHashedPassword(value string) : (HashedPassword, error)
        + {static} ReconstituteHashedPassword(value string) : HashedPassword
        + String() : string
        + IsEmpty() : bool
    }

    class ValidatedPassword <<Value Object>> {
        - value : string
        __
        + {static} ReconstituteValidatedPassword(value string) : ValidatedPassword
        + String() : string
        + IsEmpty() : bool
    }

    note bottom of ValidatedPassword
        Produced by IPasswordPolicy.Validate().
        Consumed by IPasswordService.Hash().
        Guarantees the password has passed
        all policy rules before hashing.
    end note
}

package "Device" {

    class DeviceIdentity <<Value Object>> {
        - ipAddress : string
        - os : string
        - browser : string
        - model : string
        - language : string
        - userAgent : string
        - isMobile : bool
        __
        + {static} NewDeviceIdentity(ip, os, browser, model, lang, ua, isMobile) : (DeviceIdentity, error)
        + {static} ReconstituteDeviceIdentity(ip, os, browser, model, lang, ua, isMobile) : DeviceIdentity
        + Fingerprint() : DeviceFingerprint
        + DisplayName() : string
        + IPAddress() : string
        + OS() : string
        + Browser() : string
        + Model() : string
        + Language() : string
        + UserAgent() : string
        + IsMobile() : bool
    }

    class DeviceFingerprint <<Value Object>> {
        - value : string
        __
        + {static} NewDeviceFingerprintFromIdentity(ua, os, browser, isMobile) : DeviceFingerprint
        + {static} NewDeviceFingerprint(value string) : (DeviceFingerprint, error)
        + String() : string
        + Equal(other DeviceFingerprint) : bool
    }

    note bottom of DeviceFingerprint
        SHA-256 hash derived from stable signals:
        userAgent | os | browser | isMobile.
        IP address is NOT included
        (changes across networks).
    end note

    DeviceIdentity ..> DeviceFingerprint : derives via Fingerprint()
}

package "Access" {

    class AccessIdentity <<Value Object>> {
        - userID : UserID
        - sessionID : SessionID
        - email : Email
        - roles : []RoleName
        - permissions : []Permission
        __
        + {static} NewAccessIdentity(userID, sessionID, email, roles, permissions) : (AccessIdentity, error)
        + UserID() : UserID
        + SessionID() : SessionID
        + Email() : Email
        + Roles() : []RoleName
        + Permissions() : []Permission
    }

    AccessIdentity --> UserID
    AccessIdentity --> SessionID
    AccessIdentity --> Email
    AccessIdentity --> RoleName
    AccessIdentity --> Permission
}

@enduml
